--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -14,7 +14,7 @@
   const users = document.getElementsByClassName("userVotes")[0];
 
   const getUsers = async () => {
-    const response = await fetch("http://localhost:7722/variants");
+    const response = await fetch("http://178.172.195.18:7780/variants");
     const data = await response.json();
     data.forEach(user => {
       const mainDiv = document.createElement("div");
@@ -36,7 +36,7 @@
   };
 
   const getVoices = async () => {
-    const response = await fetch("http://localhost:7722/stat");
+    const response = await fetch("http://178.172.195.18:7780/stat");
     const data = await response.json();
     data.forEach(voice => {
       const user = document.getElementById(voice.id);
@@ -45,7 +45,7 @@
   };
 
   const postVoice = async (id) => {
-    await fetch("http://localhost:7722/vote",
+    await fetch("http://178.172.195.18:7780/vote",
       {
         method: "POST",
         headers: {"Content-Type": "application/json"},
